<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_today"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/today" />
        <item
            android:id="@+id/nav_history_text"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/history_text" />
        <item
            android:id="@+id/nav_history_graphical"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/history_graphic" />
    </group>

    <!--<item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>-->

</menu>
